syntax = "proto3";

package entrypoint;

option java_package = "de.romqu.schimmelhofapi.entrypoint";
option java_multiple_files = true;

enum WeekdayDto {
  MONDAY = 0;
  TUESDAY = 1;
  WEDNESDAY = 2;
  THURSDAY = 3;
  FRIDAY = 4;
  SATURDAY = 5;
  SUNDAY = 6;
}