syntax = "proto3";

package entrypoint;

option java_package = "de.romqu.schimmelhofapi.entrypoint";
option java_multiple_files = true;


message LocalDateDto {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}